Changed 'auto_intermediate' to 'autoIntermediate' to follow naming conventions
Enhanced README and changed it to rdoc format

--- a/sample.html
+++ b/sample.html
@@ -5,7 +5,7 @@
     <script>
 
       $(function() {
-        $('#accepted').tristate({auto_intermediate:false});
+        $('#accepted').tristate({autoIntermediate:false});
         
         $('#read').click( function() {
           alert($('#accepted').getState());
